Remove TOC scrollbar and fix its width

--- a/app/imports/ui/story.css
+++ b/app/imports/ui/story.css
@@ -10,6 +10,7 @@
   height: 60px;
   padding: 10px;
   display: inline-block;
+  width: 100%;
 }
 
 #wrapper {
@@ -29,11 +30,17 @@
   width: 0;
   margin-left: -250px;
   overflow-y: auto;
+  scrollbar-width: none;
   /* background: #000; */
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease;
+}
+
+#sidebar-wrapper::-webkit-scrollbar {
+  display: none;
+  width: 0;
 }
 
 #page-content-wrapper {
@@ -67,12 +74,13 @@
 }
 
 .sidebar-nav li {
-  text-indent: 5px;
-  line-height: 40px;
+  padding: 10px 25px;
+  text-indent: -10px;
+  line-height: 20px;
   border-bottom: 1px solid gray;
   display: inline-block;
   width: 100%;
-  white-space: nowrap;
+  /* white-space: nowrap; */
 }
 
 .sidebar-nav li:hover {
@@ -83,7 +91,7 @@
   text-decoration: none;
   color: #333;
   margin: 0px;
-  display: block;
+  /* display: block; */
   width: 100%;
   height: 100%;
 }
@@ -97,10 +105,11 @@
 
 .sidebar-nav>.sidebar-brand {
   height: 65px;
+  width: 100%;
   font-size: 20px;
   font-weight: bold;
   line-height: 60px;
-  margin-left: 5px;
+  /* margin-left: 5px; */
   background-color: rgba(128,128,128,0.1);
 }
 
